gap fix attempt

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,11 +38,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0; // Reduced from 50px
+  padding: 50px 0;
 }
 
 .main {
-  margin: 20px 0 120px; // Reduced from 50px
+  margin: 50px 0 120px;
 }
 
 .header__nav {
